# I18nUpdatePython

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  test.yml
src/i18n_updater_cn/: __init__.py  asset_util.py  config.py  i18nMetaData.json  main.py  resource_converter.py  resource_pack.py  utils.py  version.py
tests/: test_asset_util.py  test_config.py  test_file_util.py  test_resource_converter.py  test_resource_pack.py  test_version.py
