[project]
name = "i18n-updater-cn"
version = "2.0.0"
description = "Minecraft mods i18n pack downloader."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Zack Zhu", email = "kressety@163.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/zack-zzq/I18nUpdatePython"
"Bug Tracker" = "https://github.com/zack-zzq/I18nUpdatePython/issues"

[project.scripts]
i18n-updater-cn = "i18n_updater_cn.main:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/i18n_updater_cn"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
